Fix issue where pagination doesn't display properly on smaller display sizes

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -253,7 +253,6 @@ form #content_block_researcher_title {
 }
 
 body {
-  margin-bottom: 17%;
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
   display: flex;
@@ -265,22 +264,13 @@ html {
     overflow-x: hidden;
 }
 
-@media only screen and (max-width: 840px ) {
-  body {
-    margin-bottom: 55%
-  }
-}
-
 @media only screen and (max-width: 600px ) {
-  body {
-    margin-bottom: 75%
+  .fullscrn_pagination {
+    display: none;
   }
-    .fullscrn_pagination {
-        display: none;
-    }
-    .mblview_pagination {
-        display: flex;
-    }
+  .mblview_pagination {
+    display: flex;
+  }
 }
 
 .advanced-search-link {
